--- a/compiler-java/src/org/eclipse/ceylon/ceylondoc/resources/messages.properties
+++ b/compiler-java/src/org/eclipse/ceylon/ceylondoc/resources/messages.properties
@@ -37,7 +37,7 @@ error.optionUnknown = {0} : unknown option
 error.optionMissing = Expected an argument for {0} option
 error.unexpected = Unexpected: {0}
 error.unexpectedAdditionalResource = Unexpected additional resource: {0}
-error.unexpectedLink = Unexpected link: {0} (allowed protocols are: http://, https://, file:// or path to directory)
+error.unexpectedLink = Unexpected link protocol: {0} (allowed protocols are: http://, https://, file:// or path to directory)
 error.unableBrowseModuleDoc = Unable to browse documentation at: {0}
 error.languageModuleSourcesMissing = Failed to find the language module sources in the specified source paths
 error.languageModuleBootstrapOptionMissing = To generate the ceylon.language module documentation you must set the --bootstrap-ceylon option
