Updated Java9 jar with valid module class #7263

--- a/compiler-java/test/java9/README
+++ b/compiler-java/test/java9/README
@@ -6,4 +6,4 @@ Just build the jar (using Java 9):
 
 And install it:
 
-    $ ceylon import-jar --descriptor module.properties com.ceylon.java9/123 mbli/java9.jar
+    $ ceylon import-jar --descriptor module.properties com.ceylon.java9/123 mlib/java9.jar
